# lyra

./: README.md  pyproject.toml
examples/: protein_fitness.py  train_genomics.py  train_proteingym.py  train_proteingym_cv.py
lyra/: __init__.py  model.py  pgc.py  s4d.py
