[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lyra-bio"
version = "0.1.0"
description = "Lyra: Efficient Subquadratic Architecture for Biological Sequence Modeling"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Implementation by dryingpaint"},
]
keywords = ["deep-learning", "state-space-models", "biology", "proteins", "genomics", "epistasis"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.0.0",
    "einops>=0.6.0",
    "numpy>=1.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/dryingpaint/lyra"
Repository = "https://github.com/dryingpaint/lyra"

[tool.setuptools.packages.find]
include = ["lyra*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N"]
